# AFewPattern

./: CMakeLists.txt  README.md  main.cpp
